# delete-artifacts

./: Cargo.toml  README.md
src/: main.rs
